fix(csssr-quest-en): fix translation bugs

--- a/csssr-quest-en/index.html
+++ b/csssr-quest-en/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 	<head>
 		<meta charset="utf-8">
@@ -39,10 +39,10 @@
 		<meta name="msapplication-square150x150logo" content="/mstile-medium.png">
 		<meta name="msapplication-wide310x150logo" content="/mstile-wide.png">
 		<meta name="msapplication-square310x310logo" content="/mstile-large.png">
-		<title>CSSSR Секретный архив учреждения</title>
+		<title>CSSSR Secret archive</title>
 		<meta name="description" content="">
 		<meta name="keywords" content="">
-		<link href="assets/styles/app.min.css?t=1460324983051" rel="stylesheet">
+		<link href="assets/styles/app.min.css?t=1460326348513" rel="stylesheet">
 	</head>
 
 	<body class="page">
@@ -50,11 +50,11 @@
 			<div class="header">
 				<div class="logo header__logo">
 					<div class="logo__company">CSSSR</div>
-					<div class="logo__caption">Секретный архив учреждения</div>
+					<div class="logo__caption">Secret archive</div>
 				</div>
 				<div class="stamp header__stamp">
-					<div class="stamp__logo">Секретно</div>
-					<div class="stamp__caption">Заполнено собственноручно</div>
+					<div class="stamp__logo">Top secret</div>
+					<div class="stamp__caption">Filled in propria persona</div>
 				</div>
 			</div>
 			<div class="dossier">
