fix(csssr-quest-en): fix translation mistakes

--- a/csssr-quest-en/index.html
+++ b/csssr-quest-en/index.html
@@ -42,7 +42,7 @@
 		<title>CSSSR Secret archive</title>
 		<meta name="description" content="">
 		<meta name="keywords" content="">
-		<link href="assets/styles/app.min.css?t=1460326348513" rel="stylesheet">
+		<link href="assets/styles/app.min.css?t=1460327523063" rel="stylesheet">
 	</head>
 
 	<body class="page">
@@ -183,11 +183,11 @@
 			</div>
 			<div class="dossier__proficiencies">
 				<div class="field-slider">
-					<div class="field-slider__title">JavaScript knowledge</div>
+					<div class="field-slider__title">JavaScript proficiency level</div>
 					<select name="jsknowledge" class="field-slider__select">
-						<option class="field-slider__option">I don't using JS</option>
-						<option class="field-slider__option">Using ready solutions</option>
-						<option selected="selected" class="field-slider__option">I'm using ready solutions and able to adapt them</option>
+						<option class="field-slider__option">I'm not using JS</option>
+						<option class="field-slider__option">Using turnkey solutions</option>
+						<option selected="selected" class="field-slider__option">I'm using turnkey solutions and able to adapt them</option>
 						<option class="field-slider__option">Writing complicated scripts</option>
 					</select>
 				</div>
